# weixin_article_summarizer

./: .env.example  .gitignore  README.md  app.py  inspect_notion_database.py  instructions.md  pyproject.toml  pytest.ini
src/weixin_summarizer/: article.py  llm_handler.py  notion_client.py  processing.py  prompts.py  utils.py
tests/: conftest.py  test_article.py  test_llm_handler.py  test_notion_client.py  test_processing.py  test_utils.py
