[tool.poetry]
name = "weixin-article-summarizer"
version = "0.1.0"
description = ""
authors = ["Guisong Fu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notion-client = "^2.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
