[tool.poetry]
name = "weixin-article-summarizer"
version = "0.1.0"
description = "A system to process and enhance articles using LLMs"
authors = ["Guisong Fu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notion-client = "^2.2.1"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
openai = "^1.14.0"
langsmith = "^0.1.22"
pydantic = "^2.6.4"
tenacity = "^9.0.0"
langchain-openai = "^0.2.9"
nest-asyncio = "^1.6.0"
langchain-ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
multi-line-output = 3

[tool.mypy]
python-version = "3.12"
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
